# sample-library-manager

./: .gitignore  CLAUDE.md  manifest.json  pyproject.toml
src/sample_library_manager/: __init__.py  config.py  server.py
src/sample_library_manager/tools/: _audio_analysis.py  _shared.py  analyze.py  organize.py  search.py
tests/: conftest.py  test_integration.py  test_license.py  test_organize.py
