[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sample-library-manager"
version = "1.0.1"
description = "Search, organize, and analyze your audio sample library using natural language. Works with any DAW."
license = "BUSL-1.1"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Sentinel Protocol Lab" },
]
keywords = ["mcp", "audio", "samples", "music-production", "ableton", "daw", "sound-design", "sample-library", "audio-search", "fl-studio", "logic-pro", "reaper", "bitwig"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.26.0",
    "mido>=1.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
audio = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.0",
]
full = [
    "sample-library-manager[audio]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.scripts]
sample-library-manager = "sample_library_manager.__main__:main"

[project.urls]
Homepage = "https://github.com/sentinel-protocol-lab/sample-library-manager"
Repository = "https://github.com/sentinel-protocol-lab/sample-library-manager"
Issues = "https://github.com/sentinel-protocol-lab/sample-library-manager/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_library_manager"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
